# Sales-Champion-Cloud-Group

./: .env.example  .gitignore  .gitmessage  LICENSE  README-Windows.md  README.md  docker-compose.yml  index.html  reset-sales-champion-data.bat  start-docker.bat  start-sales-champion.bat  stop-docker.bat  stop-sales-champion.bat  vercel.json  wait-and-open.ps1  wait-for-docker.ps1  启动说明 - 无 Docker 版.md  快速部署指南.md  部署指南.md
backend/: Dockerfile  README.md  alembic.ini  init_db.py  pyproject.toml  run_server.py  start-backend.bat
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/sales_champion_backend/: __init__.py  main.py  schemas.py  seed_cli.py
backend/src/sales_champion_backend/api/: deps.py  router.py
backend/src/sales_champion_backend/api/routes/: assistant.py  auth.py  champion.py  dashboard.py  demo.py  knowledge.py  products.py  seed.py  training.py
backend/src/sales_champion_backend/core/: config.py  security.py
backend/src/sales_champion_backend/db/: models.py  session.py
backend/src/sales_champion_backend/providers/: base.py  demo.py
backend/src/sales_champion_backend/services/: analytics_service.py  assistant_service.py  champion_service.py  retrieval_service.py  seed_service.py  training_service.py
backend/tests/: test_services.py
frontend/: Dockerfile  next.config.ts  package.json
prompts/: 01_bootstrap_prompt.txt  02_mvp_focus_prompt.txt  03_polish_prompt.txt  04_repo_handoff_prompt.txt  sales_assistant_prompt.txt  training_evaluator_prompt.txt
schemas/: champion_score_rule.schema.json  (+1 more)
(+17 files in other folders)
