[project]
name = "sales-champion-backend"
version = "0.1.0"
description = "销冠云团（高端茶 Demo 版）FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.1",
    "orjson>=3.11.3",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
sales-champion-backend = "sales_champion_backend.main:run"
seed-demo = "sales_champion_backend.seed_cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
